[package]
name = "volpe"
version = "0.1.0"
authors = [
    "Lucas Holten <lhc.holten@gmail.com>",
    "Viliam Vadocz <viliam.vadocz@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volpe-parser = { path = "volpe-parser" }
z3 = "~0.9.0"
typed-arena = "~2.0.1"
logos = "~0.12.0"
