[package]
name = "volpe-compiler-2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volpe-parser-2 = { path = "../volpe-parser-2" }
wasm-encoder = "0.5.0"
string-interner = "0.12.2"
wasmer = "2.0.0"
wast = { git = "https://github.com/LHolten/wasm-tools" }
