[package]
name = "volpe-ls"
version = "0.1.0"
authors = ["Viliam Vadocz <viliam.vadocz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.5.0"
lsp-types = "0.86.0"
serde_json = "1.0.59"
crossbeam = "0.8"
