[package]
name = "volpe-parser"
version = "0.1.0"
authors = ["Lucas Holten <lhc.holten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "~0.19.1"
regex = "~1.4.2"

[build-dependencies]
lalrpop = { version = "~0.19.1", features = ["lexer"] }
