[package]
name = "volpe-parser"
version = "0.1.0"
authors = ["Lucas Holten <lhc.holten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = false

[profile.test]
debug = false

[dependencies]
logos = "~0.12.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
